--- a/app/src/main/res/drawable/button_dialog_main.xml
+++ b/app/src/main/res/drawable/button_dialog_main.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape>
-            <corners android:radius="@dimen/vs_5" />
+            <corners android:radius="@dimen/vs_3" />
             <!--  选中按钮颜色   -->
             <!--<solid android:color="@color/color_353744" />-->
             <solid android:color="@color/color_1890FF" />
@@ -10,8 +10,8 @@
     </item>
     <item android:state_focused="false">
         <shape>
-            <corners android:radius="@dimen/vs_5" />
-            <solid android:color="@color/color_CC353744" />
+            <corners android:radius="@dimen/vs_3" />
+            <solid android:color="@color/color_808080_95" />
         </shape>
     </item>
 </selector>
