--- a/app/src/main/res/drawable/button_dialog_main.xml
+++ b/app/src/main/res/drawable/button_dialog_main.xml
@@ -11,7 +11,7 @@
     <item android:state_focused="false">
         <shape>
             <corners android:radius="@dimen/vs_3" />
-            <solid android:color="@color/color_808080_95" />
+            <solid android:color="@color/color_CC353744" />
         </shape>
     </item>
 </selector>
