--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -50,6 +50,8 @@
             android:id="@+id/mGridView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/vs_10"
+            android:paddingRight="@dimen/vs_10"
             android:orientation="vertical"/>
 
     </LinearLayout>
