--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -25,9 +25,9 @@
                 android:background="@drawable/button_dialog_main"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="@dimen/vs_5"
+                android:padding="@dimen/vs_10"
                 android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_22"
+                android:textSize="@dimen/ts_26"
                 android:text="全选" />
 
             <TextView
@@ -40,10 +40,10 @@
                 android:background="@drawable/button_dialog_main"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="@dimen/vs_5"
+                android:padding="@dimen/vs_10"
                 android:text="全不选"
                 android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_22" />
+                android:textSize="@dimen/ts_26" />
         </LinearLayout>
 
         <com.owen.tvrecyclerview.widget.TvRecyclerView
@@ -52,6 +52,8 @@
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/vs_10"
             android:paddingRight="@dimen/vs_10"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+            app:tv_verticalSpacingWithMargins="@dimen/vs_10"
             android:orientation="vertical"/>
 
     </LinearLayout>
