--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -25,7 +25,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="@dimen/vs_20"
-                android:textColor="@color/color_FFFFFF"
+                android:textColor="@color/color_CC000000"
                 android:textSize="@dimen/ts_26"
                 android:text="全选" />
 
@@ -40,7 +40,7 @@
                 android:focusable="true"
                 android:padding="@dimen/vs_20"
                 android:text="全不选"
-                android:textColor="@color/color_FFFFFF"
+                android:textColor="@color/color_CC000000"
                 android:textSize="@dimen/ts_26" />
         </LinearLayout>
 
@@ -51,7 +51,7 @@
             android:paddingLeft="@dimen/vs_10"
             android:paddingRight="@dimen/vs_10"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="@dimen/vs_410"
+            app:layout_constraintHeight_max="@dimen/vs_390"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkAll"
