--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_root"
-        android:layout_width="@dimen/vs_480"
+    <LinearLayout
+        android:layout_width="@dimen/vs_400"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/shape_dialog_bg_main">
+        android:background="@drawable/shape_dialog_pg_search_checkbox"
+        android:orientation="vertical">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -50,7 +50,7 @@
             android:paddingLeft="@dimen/vs_10"
             android:paddingRight="@dimen/vs_10"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="@dimen/vs_390"
+            app:layout_constraintHeight_max="@dimen/vs_360"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkAll"
@@ -64,6 +64,7 @@
             android:layout_height="@dimen/vs_15"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/mGridView" />
     </LinearLayout>
 
