--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="@dimen/vs_400"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -66,6 +66,5 @@
             app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/mGridView" />
-    </LinearLayout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
