--- a/app/src/main/res/drawable/shape_user_focus.xml
+++ b/app/src/main/res/drawable/shape_user_focus.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true">
         <shape>
-            <corners android:radius="10mm" />
+            <corners android:radius="2mm" />
             <stroke android:width="2mm" android:color="@color/color_808080_95" />
             <solid android:color="@color/color_6C3D3D3D" />
         </shape>
     </item>
     <item android:state_focused="false">
         <shape>
-            <corners android:radius="10mm" />
+            <corners android:radius="@2mm" />
             <solid android:color="@color/color_6C3D3D3D"/>
         </shape>
     </item>
