--- a/app/src/main/res/drawable/shape_user_focus.xml
+++ b/app/src/main/res/drawable/shape_user_focus.xml
@@ -9,7 +9,7 @@
     </item>
     <item android:state_focused="false">
         <shape>
-            <corners android:radius="@2mm" />
+            <corners android:radius="2mm" />
             <solid android:color="@color/color_6C3D3D3D"/>
         </shape>
     </item>
