--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="@dimen/vs_400"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -50,7 +50,7 @@
             android:paddingLeft="@dimen/vs_10"
             android:paddingRight="@dimen/vs_10"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="@dimen/vs_440"
+            app:layout_constraintHeight_max="@dimen/vs_410"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkAll"
@@ -66,5 +66,5 @@
             app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/mGridView" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </FrameLayout>
