--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="@dimen/vs_400"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -13,6 +13,7 @@
 
         <LinearLayout
             android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
@@ -23,6 +24,7 @@
                 android:gravity="center"
                 android:clickable="true"
                 android:focusable="true"
+                app:layout_constraintTop_toTopOf="parent"
                 android:padding="@dimen/vs_20"
                 android:textColor="@color/color_CC000000"
                 android:textSize="@dimen/ts_26"
@@ -37,6 +39,7 @@
                 android:layout_marginLeft="@dimen/vs_0"
                 android:clickable="true"
                 android:focusable="true"
+                app:layout_constraintTop_toTopOf="parent"
                 android:padding="@dimen/vs_20"
                 android:text="全不选"
                 android:textColor="@color/color_CC000000"
@@ -50,7 +53,7 @@
             android:paddingLeft="@dimen/vs_10"
             android:paddingRight="@dimen/vs_10"
             app:layout_constrainedHeight="true"
-            app:layout_constraintHeight_max="@dimen/vs_360"
+            app:layout_constraintHeight_max="@dimen/vs_480"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkAll"
@@ -66,5 +69,5 @@
             app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/mGridView" />
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
