--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/vs_480">
     <LinearLayout
         android:layout_width="@dimen/vs_400"
         android:layout_height="wrap_content"
@@ -46,24 +46,17 @@
                 android:textSize="@dimen/ts_26" />
         </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            <com.owen.tvrecyclerview.widget.TvRecyclerView
-                android:id="@+id/mGridView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/vs_10"
-                android:paddingRight="@dimen/vs_10"
-                app:layout_constrainedHeight="true"
-                app:layout_constraintHeight_max="@dimen/vs_410"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/checkAll"
-                app:tv_layoutManager="V7LinearLayoutManager"
-                app:tv_selectedItemIsCentered="true"
-                app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
-                app:tv_verticalSpacingWithMargins="@dimen/vs_10"
-                android:orientation="vertical"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.owen.tvrecyclerview.widget.TvRecyclerView
+            android:id="@+id/mGridView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/vs_10"
+            android:paddingRight="@dimen/vs_10"
+            app:tv_layoutManager="V7LinearLayoutManager"
+            app:tv_selectedItemIsCentered="true"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
+            app:tv_verticalSpacingWithMargins="@dimen/vs_10"
+            android:orientation="vertical"/>
 
         <View
             android:layout_width="match_parent"
