--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/vs_480">
+    android:layout_height="@dimen/vs_580">
     <LinearLayout
         android:layout_width="@dimen/vs_400"
         android:layout_height="wrap_content"
@@ -52,6 +52,8 @@
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/vs_10"
             android:paddingRight="@dimen/vs_10"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintHeight_max="@dimen/vs_550"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
@@ -60,7 +62,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/vs_15"
+            android:layout_height="@dimen/vs_10"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical"
