--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -84,6 +84,7 @@
     <dimen name="vs_470">470mm</dimen>
     <dimen name="vs_480">480mm</dimen>
     <dimen name="vs_550">550mm</dimen>
+    <dimen name="vs_580">580mm</dimen>
     <dimen name="vs_569">569mm</dimen>
     <dimen name="vs_600">600mm</dimen>
     <dimen name="vs_610">610mm</dimen>
