--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -83,6 +83,8 @@
     <dimen name="vs_440">440mm</dimen>    
     <dimen name="vs_470">470mm</dimen>
     <dimen name="vs_480">480mm</dimen>
+    <dimen name="vs_490">490mm</dimen>
+    <dimen name="vs_520">520mm</dimen>
     <dimen name="vs_550">550mm</dimen>
     <dimen name="vs_580">580mm</dimen>
     <dimen name="vs_569">569mm</dimen>
