--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -48,6 +48,8 @@
 
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:id="@+id/mGridView"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/vs_10"
@@ -65,7 +67,6 @@
             android:layout_height="@dimen/vs_10"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/mGridView" />
+            android:orientation="vertical"/>
     </LinearLayout>
 </FrameLayout>
