--- a/app/src/main/res/layout/dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/dialog_checkbox_search.xml
@@ -50,14 +50,14 @@
             android:id="@+id/mGridView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/vs_0"
-            android:paddingRight="@dimen/vs_0"
+            android:paddingLeft="@dimen/vs_4_"
+            android:paddingRight="@dimen/vs_4_"
             app:layout_constrainedHeight="true"
             app:layout_constraintHeight_max="@dimen/vs_490"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
-            app:tv_horizontalSpacingWithMargins="@dimen/vs_0"
-            app:tv_verticalSpacingWithMargins="@dimen/vs_0"
+            app:tv_horizontalSpacingWithMargins="@dimen/vs_4_"
+            app:tv_verticalSpacingWithMargins="@dimen/vs_4_"
             android:orientation="vertical"/>
 
         <View
