--- a/app/src/main/res/layout/item_dialog_checkbox_search.xml
+++ b/app/src/main/res/layout/item_dialog_checkbox_search.xml
@@ -16,11 +16,11 @@
             android:background="@drawable/button_dialog_main"
             android:clickable="true"
             android:focusable="true"
-            android:paddingTop="@dimen/vs_0"
-            android:paddingBottom="@dimen/vs_0"
-            android:paddingLeft="@dimen/vs_0"
-            android:paddingRight="@dimen/vs_0"
-            android:textSize="@dimen/ts_34"
+            android:paddingTop="@dimen/vs_4_"
+            android:paddingBottom="@dimen/vs_4_"
+            android:paddingLeft="@dimen/vs_4_"
+            android:paddingRight="@dimen/vs_4_"
+            android:textSize="@dimen/ts_38"
             android:text="1111"/>
     </LinearLayout>
 </FrameLayout>
