--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/vs_10"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/vs_40"
+            android:paddingLeft="@dimen/vs_50"
             android:paddingRight="@dimen/vs_50"
             android:paddingBottom="@dimen/vs_10">
 
@@ -29,7 +29,7 @@
 
             <View
                 android:id="@+id/previewPlayerPlace"
-                android:layout_width="@dimen/vs_480"
+                android:layout_width="@dimen/vs_569"
                 android:layout_height="@dimen/vs_320"
                 android:visibility="gone" />
 
@@ -142,6 +142,7 @@
                     android:id="@+id/tvPlayUrl"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/vs_5"
                     android:ellipsize="end"
                     android:singleLine="true"
                     android:textColor="@color/color_CCFFFFFF"
@@ -290,23 +291,23 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/previewPlayer"
-        android:layout_width="@dimen/vs_470"
-        android:layout_height="@dimen/vs_300"
+        android:layout_width="@dimen/vs_569"
+        android:layout_height="@dimen/vs_320"
         android:layout_marginStart="@dimen/vs_50"
         android:layout_marginLeft="@dimen/vs_50"
-        android:layout_marginTop="@dimen/vs_20"
+        android:layout_marginTop="@dimen/vs_10"
         android:layout_marginBottom="@dimen/vs_10"
         android:visibility="gone" />
 
     <View
         android:id="@+id/previewPlayerBlock"
-        android:layout_width="@dimen/vs_470"
-        android:layout_height="@dimen/vs_300"
+        android:layout_width="@dimen/vs_569"
+        android:layout_height="@dimen/vs_320"
         android:focusable="true"
         android:background="@drawable/preview_player_block"
         android:layout_marginStart="@dimen/vs_50"
         android:layout_marginLeft="@dimen/vs_50"
-        android:layout_marginTop="@dimen/vs_20"
+        android:layout_marginTop="@dimen/vs_10"
         android:layout_marginBottom="@dimen/vs_10"
         android:visibility="gone" />
 </FrameLayout>
